# kairos-llm-scorer

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
config/: scorer.example.toml  screener.example.xml
evals/: golden.jsonl  profile.json  report.haiku.md  report.sonnet.md  run_eval.py
infra/: Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.base.yml  rotate-api-key.sh
infra/cloud/: main.tf
infra/cloud/k8s/: deployment.yaml
infra/local/cluster/: Caddyfile  docker-compose.yml  post-receive.sh
infra/local/cluster/edge/: kairos-llm-scorer.caddy
infra/local/standalone/: Caddyfile  docker-compose.yml
src/scorer/: __init__.py  api.py  auth.py  config.py
src/scorer/application/: __init__.py  score.py  screener_port.py
src/scorer/domain/: __init__.py
src/scorer/domain/logic/: __init__.py  baseline.py  eligibility.py  gate.py  tuning.py  validate.py  vec.py
src/scorer/domain/models/: __init__.py  posting.py  profile.py  request.py  shared.py  verdict.py
src/scorer/infrastructure/: __init__.py
src/scorer/infrastructure/screener/: __init__.py  prompt.py
src/scorer/infrastructure/screener/anthropic_adapter/: screener.py
src/scorer/infrastructure/screener/prompts/: screener.example.xml
tests/: conftest.py  fakes.py  test_api.py  test_config.py
tests/application/: test_score.py
tests/domain/logic/: test_baseline.py  test_eligibility.py  test_gate.py  test_tuning.py  test_validate.py
tests/domain/models/: test_request.py  test_schema.py
tests/evals/: test_cache.py
tests/infrastructure/screener/: test_prompt.py  test_screener.py
